--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Index.cshtml
@@ -283,7 +283,7 @@
                                     <td>@(Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault() == null ? "" : Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault().FechaSISO.Value.ToString("dd/MM/yyyy"))</td>
                                     <td>
                                         @(
-                                            Model.Productos.Productos.Where(a => a.itemCode == Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault().ItemCode).FirstOrDefault() == null ? "" : Model.Productos.Productos.Where(a => a.itemCode == Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault().ItemCode).FirstOrDefault().itemName
+                                            Model.Productos.Productos.Where(a => a.itemCode == (Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault() == null ? "" : Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault().ItemCode)).FirstOrDefault() == null ? "" : Model.Productos.Productos.Where(a => a.itemCode == Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault().ItemCode).FirstOrDefault().itemName
                                             ) - @(Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault() == null ? "" : Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault().SerieFabricante)
                                     </td>
                                     <td>
