--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Observar.cshtml
@@ -158,7 +158,16 @@
 
                     </div>
 
+                    <div class="col-md-4 pr-1">
 
+                        <div class="form-group">
+                            <label>Ubicación Producto</label>
+                            <input type="text" class="form-control form-control-lg" id="desc" asp-for="UbicacionProd" readonly>
+
+                        </div>
+
+
+                    </div>
 
 
                     <div class="col-md-4 pr-1">
